==> ExploreEmbedded/Pic16f877a_ExploreUltraPicDevKit/Code/SampleCode/00-libfiles/uart.c <==
#include <stdarg.h>
#include "uart.h"

void UART_Init(uint32_t v_baudRate_u32)
{	
    TRISC=0x80;      // Configure Rx pin as input and Tx as output  
  	TXSTA=0x20;      // Asynchronous mode, 8-bit data & enable transmitter
	RCSTA=0x90;      // 8-bit continous receive enable
	UART_SetBaudRate(v_baudRate_u32);
}

void UART_SetBaudRate(uint32_t v_baudRate_u32)
{
	uint8_t RegValue;

	if((v_baudRate_u32 >= C_MinBaudRate_U32) && (v_baudRate_u32<=C_MaxBaudRate_U32))
	{
		/* Check if the requested baudate is within range,
	     If yes then calculate the value to be loaded into baud rate generator. */
		RegValue = (uint8_t)M_GetBaudRateGeneratorValue(v_baudRate_u32);
	}
	else
	{
		/*	 Invalid baudrate requested, hence set it to default baudrate of 9600 */
		RegValue = (uint8_t)M_GetBaudRateGeneratorValue(9600);
	}

	SPBRG = RegValue; 
}

char UART_RxChar()
{
    while(RCIF==0);    // Wait till the data is received 
    RCIF=0;            // Clear receiver flag
    return(RCREG);        // Return the received data to calling function
}

void UART_TxChar(char v_uartData_u8)
{
    while(TXIF==0);  // Wait till the transmitter register becomes empty
	TXIF=0;        // Clear transmitter flag
    TXREG=v_uartData_u8;        // load the char to be transmitted into transmit reg
}
