==> ExploreEmbedded/Explore-Cortex-M3-LPC1768-DVB-14001/Code/KeilExamples/00-libfiles/uart.c <==
#include <stdarg.h>
#include "uart.h"
#include "gpio.h"
#define C_MaxUartChannels_U8 4u
#define C_UartOne_U8         1u

void UART_Init(uint8_t v_uartChannel_u8, uint32_t v_baudRate_u32)
{    
    if(v_uartChannel_u8< C_MaxUartChannels_U8)
    {	 
        GPIO_PinFunction(UartConfig[v_uartChannel_u8].TxPin,UartConfig[v_uartChannel_u8].PinFunSel);
        GPIO_PinFunction(UartConfig[v_uartChannel_u8].RxPin,UartConfig[v_uartChannel_u8].PinFunSel);
		util_BitSet(LPC_SC->PCONP,UartConfig[v_uartChannel_u8].pconBit);
        
        /* Enable FIFO and reset Rx/Tx FIFO buffers */
        UartConfig[v_uartChannel_u8].UARTx->FCR = (1<<SBIT_FIFO) | (1<<SBIT_RxFIFO) | (1<<SBIT_TxFIFO); 

        /* 8bit data, 1Stop bit, No parity */
        UartConfig[v_uartChannel_u8].UARTx->LCR = (0x03<<SBIT_WordLenght) | (1<<SBIT_DLAB);

        UART_SetBaudRate(v_uartChannel_u8,v_baudRate_u32);    
    }
}

void UART_SetBaudRate(uint8_t v_uartChannel_u8, uint32_t v_baudRate_u32)
{
    uint32_t v_UartPclk_u32,v_Pclk_u32,v_RegValue_u32;
    
    if(v_uartChannel_u8 < C_MaxUartChannels_U8 )
    {  
        /** Baud Rate Calculation :
       PCLKSELx registers contains the PCLK info for all the clock dependent peripherals.
       Bit6,Bit7 contains the Uart Clock(ie.UART_PCLK) information.
       The UART_PCLK and the actual Peripheral Clock(PCLK) is calculated as below.
       (Refer data sheet for more info)

       UART_PCLK    PCLK
         0x00       SystemFreq/4        
         0x01       SystemFreq
         0x02       SystemFreq/2
         0x03       SystemFreq/8   
         **/

        v_UartPclk_u32 = (LPC_SC->PCLKSEL0 >> 6) & 0x03;

        switch( v_UartPclk_u32 )
        {
        case 0x00:
            v_Pclk_u32 = SystemCoreClock/4;
            break;
        case 0x01:
            v_Pclk_u32 = SystemCoreClock;
            break; 
        case 0x02:
            v_Pclk_u32 = SystemCoreClock/2;
            break; 
        case 0x03:
            v_Pclk_u32 = SystemCoreClock/8;
            break;
        }    

         v_RegValue_u32 = ( v_Pclk_u32 / (16 * v_baudRate_u32 )); 

		 UartConfig[v_uartChannel_u8].UARTx->DLL = util_ExtractByte0to8(v_RegValue_u32);
         UartConfig[v_uartChannel_u8].UARTx->DLM = util_ExtractByte8to16(v_RegValue_u32);
         
         util_BitClear(UartConfig[v_uartChannel_u8].UARTx->LCR, SBIT_DLAB); // Clear DLAB after setting DLL,DLM
    } 
}

char UART_RxChar(uint8_t v_uartChannel_u8)
{								
    char ch = 0; 
    
    if(v_uartChannel_u8 < C_MaxUartChannels_U8 )
    {
          /* Wait till the data is received */
         while(util_IsBitCleared(UartConfig[v_uartChannel_u8].UARTx->LSR,SBIT_RDR)); 
         ch = UartConfig[v_uartChannel_u8].UARTx->RBR; // Copy the received data
    }
    return ch;    
}

void UART_TxChar(uint8_t v_uartChannel_u8, char v_uartData_u8)
{
    if(v_uartChannel_u8 < C_MaxUartChannels_U8)
    {
       while(util_IsBitCleared(UartConfig[v_uartChannel_u8].UARTx->LSR,SBIT_THRE)); // Wait for Previous transmission
       UartConfig[v_uartChannel_u8].UARTx->THR=v_uartData_u8;   // Load the data to be transmitted   
    }
}
